# frc_blue_team

./: CMakeLists.txt  package.xml
cmake/: SearchForStuff.cmake
include/: CMakeLists.txt
include/frc/: CMakeLists.txt  FRCBlueAckermannDrivePlugin.hh  FRCBlueCameraPlugin.hh  FRCBlueDiffDrivePlugin.hh  FRCBlueGripperPlugin.hh  FRCBlueRobotPlugin.hh  FRCBlueScorerPlugin.hh
launch/: camera.launch  frc_blue.launch  image_view.launch  joy.launch  operator.launch  spawn.launch  spawn3.launch  spawn4.launch  spawn_alt.launch
models/: basic_car.config  basic_car.config~  basic_car.sdf  basic_car.sdf~
models/basic_car/: model.config  model.sdf
models/blue_1/: model.config  model.sdf
models/blue_2/: model.config  model.sdf
models/blue_3/: model.config  model.sdf
models/camera_joy1/: model.sdf
models/camera_joy2/: model.sdf
models/camera_joy3/: model.sdf
models/frc_blue_scorer/: model.config  model.sdf
models/minion/: model.config  model.sdf
models/monster/: model.config  model.sdf
scripts/: blue_team_go
src/: CMakeLists.txt  FRCBlueAckermannDrivePlugin.cc  FRCBlueCameraPlugin.cc  FRCBlueDiffDrivePlugin.cc  FRCBlueGripperPlugin.cc  FRCBlueRobotPlugin.cc  FRCBlueScorerPlugin.cc
test/integration/: CMakeLists.txt
tools/: CMakeLists.txt
worlds/: CMakeLists.txt  FRCblue.world
