<package format="2">
  <name>frc_blue_team</name>
  <version>0.1.0</version>
  <description>The blue team's package for the FRC trail.</description>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
